2004-03-31  Don Porter  <dgp@users.sourceforge.net>

	* doc/msgcat.n:	Clarified message catalog file encodings. [Bug 811457]
	* library/msgcat/msgcat.tcl:	
	Updated internals to make use of [dict]s to store message catalog
	data and to use [source -encoding utf-8] to access catalog files.
	Thanks to Michael Sclenker.  [Patch 875055, RFE 811459]
        Corrected [mcset] to be able to successfully set a translation to
        the empty string.  [mcset $loc $src {}] was incorrectly set the
        $loc translation of $src back to $src.  Also changed [ConvertLocale]
        to minimally require a non-empty "language" part in the locale value.
        If not, an error raised prompts [Init] to keep looking for a valid
        locale value, or ultimately fall back on the "C" locale. [Bug 811461].
	* library/msgcat/pkgIndex.tcl:	Bump to msgcat 1.4.1.  

2004-03-30  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclHash.c (HashStringKey): Cleaned up. This function is
	not faster, but it is a little bit clearer.
	* generic/tclLiteral.c (HashString): Applied logic from HashObjKey.
	* generic/tclObj.c (HashObjKey): Rewrote to fix fault which hashed
	every single-character object to the same hash bucket.  The new
	code is shorter, simpler, clearer, and (happily) faster.

2004-03-30  Miguel Sofer <msofer@users.sf.net>

	* generic/tclExecute.c (TEBC): reverting to the previous method
	for async tests in TEBC, as the new method turned out to be too
	costly. Async tests now run every 64 instructions.

2004-03-30  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.c:     New instruction code INST_START_CMD
	* generic/tclCompile.h:     that allows checking the bytecode's
	* generic/tclExecute.c:     validity [Bug 729692] and the interp's
	* tests/interp.test (18.9): readyness [Bug 495830] before running
	* tests/proc.test (7.1):    the command. It also changes the
	* tests/rename.test (6.1):  mechanics of the async tests in TEBC,